# Apziva-Project-4-MonReader

./: Makefile  README.md  pyproject.toml
MonReader/: __init__.py  dataset.py  features.py  plots.py
MonReader/modeling/: predict.py  train.py
notebooks/: monreader.ipynb
