[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MonReader"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Soo Ihk Ro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.2"


[tool.ruff]
line-length = 99
src = ["MonReader"]
include = ["pyproject.toml", "MonReader/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MonReader"]
force-sort-within-sections = true

